--- a/platformio.ini
+++ b/platformio.ini
@@ -1,10 +1,7 @@
-[env:esp32dev]
-platform = espressif32
-board = esp32dev
+[env:esp12e]
+platform = espressif8266
+board = esp12e
 framework = arduino
-
-lib_deps =
-    https://github.com/adafruit/Adafruit_SSD1306.git
 
 upload_port = /dev/ttyUSB0
 upload_speed = 912600
