--- a/platformio.ini
+++ b/platformio.ini
@@ -1,10 +1,28 @@
+[platformio]
+default_envs = megaatmega2560
+
+[env]
+framework = arduino
+monitor_port = /dev/ttyUSB0
+monitor_speed = 115200
+
+build_flags = 
+    -D MEGA2560=1
+    -D ESP8266=2
+    -D BOARD=MEGA2560
+
+
+[env:megaatmega2560]
+platform = atmelavr
+board = megaatmega2560
+
+upload_port = /dev/ttyUSB0
+upload_speed = 115200
+
+
 [env:esp12e]
 platform = espressif8266
 board = esp12e
-framework = arduino
 
 upload_port = /dev/ttyUSB0
 upload_speed = 912600
-
-monitor_port = /dev/ttyUSB0
-monitor_speed = 115200
